changed comments in README.md file

--- a/zabbix.role/tasks/main.yml
+++ b/zabbix.role/tasks/main.yml
@@ -33,6 +33,8 @@
     state: present
   tags:
     - docker
+- name: Added user to docker group
+  shell: usermod -aG docker {{ ansible_user }}exit
 - name: Start postgresql
   docker_container:
     name: 'db'
