--- a/zabbix.role/tasks/main.yml
+++ b/zabbix.role/tasks/main.yml
@@ -41,7 +41,7 @@
     image: postgres:13.6
     state: 'started'
     env:
-      POSTGRES_PASSWORD: 'password'
+      POSTGRES_PASSWORD: '12345678'
     ports:
       - "5432:5432"
     volumes:
